<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.poc.flyway</groupId>
	<artifactId>Multitenant-Flyway-POC</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Multitenant-Flyway-POC</name>
	<description>Multitenant Flyway POC</description>
	<properties>
		<java.version>17</java.version>
		<app.profiles>local, dit</app.profiles>
		<hibernate.version>6.2.7.Final</hibernate.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.vladmihalcea</groupId>
			<artifactId>hibernate-types-60</artifactId>
			<version>2.21.1</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.persistence</groupId>
			<artifactId>jakarta.persistence-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<profiles>${app.profiles}</profiles>
					<jvmArguments>
						-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006
					</jvmArguments>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.amashchenko.maven.plugin</groupId>
				<artifactId>gitflow-maven-plugin</artifactId>
				<configuration>
					<verbose>true</verbose>
					<gitFlowConfig>
						<productionBranch>master</productionBranch>
						<developmentBranch>develop</developmentBranch>
						<versionTagPrefix>v</versionTagPrefix>
					</gitFlowConfig>
					<allowSnapshots>true</allowSnapshots>
				</configuration>
			</plugin>
			<!-- Spotless Plugin -->
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.44.2</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
							<goal>apply</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<java>
						<includes>
							<include>src/main/java/**/*.java</include>
							<include>src/test/java/**/*.java</include>
						</includes>
						<googleJavaFormat>
							<version>1.25.2</version>
							<style>AOSP</style>
						</googleJavaFormat>
						<importOrder/>
					</java>
				</configuration>
			</plugin>

			<!--<plugin>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-maven-plugin</artifactId>
                <version>9.22.3</version>
                <executions>
                    &lt;!&ndash; Execution for the primary datasource &ndash;&gt;
                    <execution>
                        <id>primary-clean-migrate</id>
                        <phase>pre-integration-test</phase>
                        <configuration>
                            <url>jdbc:postgresql://localhost:5439/primarydb</url>
                            <user>postgres</user>
                            <password>primary</password>
                            <schemas>prim</schemas>
                            <locations>
                                <location>classpath:db/migration/primary</location>
                            </locations>
                            <cleanDisabled>false</cleanDisabled>
                        </configuration>
                        <goals>
                            <goal>clean</goal>
                            <goal>migrate</goal>
                        </goals>
                    </execution>
                    &lt;!&ndash; Execution for the configuration datasource &ndash;&gt;
                    <execution>
                        <id>config-clean-migrate</id>
                        <phase>pre-integration-test</phase>
                        <configuration>
                            <url>jdbc:postgresql://localhost:5438/configdb</url>
                            <user>postgres</user>
                            <password>config</password>
                            <schemas>config</schemas>
                            <locations>
                                <location>classpath:db/migration/config</location>
                            </locations>
                            <cleanDisabled>false</cleanDisabled>
                        </configuration>
                        <goals>
                            <goal>clean</goal>
                            <goal>migrate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
-->
			<!--		<plugin>
                        <groupId>org.flywaydb</groupId>
                        <artifactId>flyway-maven-plugin</artifactId>
                        <version>9.22.3</version>
                        <configuration>
                            <url>jdbc:postgresql://localhost:5438/configdb</url>
                            <user>postgres</user>
                            <password>config</password>
                            <schemas>config</schemas>
                            <locations>
                                <location>classpath:db/migration/config</location>
                            </locations>
                            <cleanDisabled>false</cleanDisabled>
                        </configuration>
                    </plugin>-->

			<!--		<plugin>
                        <groupId>org.flywaydb</groupId>
                        <artifactId>flyway-maven-plugin</artifactId>
                        <version>9.22.3</version>
                        <configuration>
                            <url>jdbc:postgresql://localhost:5439/primarydb</url>
                            <user>postgres</user>
                            <password>primary</password>
                            <schemas>prim</schemas>
                            <locations>
                                <location>classpath:db/migration/primary</location>
                            </locations>
                            <cleanDisabled>false</cleanDisabled>
                        </configuration>
                    </plugin>-->

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.10</version>
				<executions>
					<!-- Prepare JaCoCo before tests run -->
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>

					<!-- Generate Code Coverage Report after tests run -->
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>

					<!-- Check for Minimum Coverage -->
					<execution>
						<id>check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.90</minimum>
										</limit>
										<limit>
											<counter>INSTRUCTION</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.90</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>
</project>
